Tenho que fazer logo as informações de contato do telefone e gmail

--- a/contato.html
+++ b/contato.html
@@ -57,6 +57,13 @@
 			<div class="contacts-wrapper">
 				<div class="contact">
 					<img src="images/Contato/Icones/cellphone.svg" alt="">
+					<div class="hide-content">
+						<h2 class="info-text__hide-content">Deseja ver nossos telefones para contato</h2>
+						<div class="btns">
+							<button class="yes-btn">Sim</button>
+							<button class="no-btn">Não</button>
+						</div>
+					</div>
 				</div>
 				<div class="contact">
 					<img src="images/Contato/Icones/mail.svg" alt="">
@@ -70,14 +77,14 @@
 			<div class="form-container">
 				<form action="" method="get">
 					<div class="row">
-						<input type="text" name="username" id="username" value="Nome*" class="input">
-						<input type="email" name="email" id="email" value="Email*" class="input">
+						<input type="text" name="username" id="username" placeholder="Nome*" class="input">
+						<input type="email" name="email" id="email" placeholder="Email*" class="input">
 					</div>
 					<div class="row">
-						<input type="tel" name="cellphone" id="cellphone" value="Telefone*" class="input">
-						<input type="text" name="city" id="city" value="Cidade*" class="input">
+						<input type="tel" name="cellphone" id="cellphone" placeholder="Telefone*" class="input">
+						<input type="text" name="city" id="city" placeholder="Cidade*" class="input">
 					</div>
-					<textarea name="question" id="question" cols="30" rows="5" class="input" value="Dúvida" class="submit-question"></textarea>
+					<textarea name="question" id="question" cols="30" rows="5" class="input" value="Dúvida" class="submit-question" placeholder="Dúvida*"></textarea>
 					<button type="submit" class="submit-question">Enviar Dúvida</button>
 				</form>
 			</div>
