--- a/index.html
+++ b/index.html
@@ -61,16 +61,18 @@
 				</div>
 				<div class="card-text">
 					<h3 class="card-title">Operação de Máquinas Florestais</h3>
-					<p class="card-description">Em operação de Máquinas temos:</p>
-					<ol class="card-list">
-						<li>Harvester de Esteira</li>
-						<li>Forwarder</li>
-						<li>Retroescavadeira</li>
-						<li>Empilhadeira</li>
-						<li>NR11 Operação de Caminhão Grua</li>
-					</ol>
+					<div class="card-description">
+						<p>Cursos desse Tópico:</p>
+						<ul class="card-list">
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita"> Harvester de Esteira</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Forwarder</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Retroescavadeira</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Empilhadeira</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">NR11 Operação de Caminhão Grua</li>
+						</ul>
+					</div>
 					<div class="btn-wrapper">
-						<input type="button" value="Saiba Mais" class="know-more-btn">
+						<input type="button" value="Clique aqui para mais detalhes" class="know-more-btn">
 					</div>
 				</div>
 			</div>
