--- a/index.html
+++ b/index.html
@@ -78,10 +78,49 @@
 			</div>
 
 			<!-- Curso de Manuntenção de Máquinas voltadas para uso florestal-->
-			<div class="card"></div>
+			<div class="card">
+				<div class="img-wrapper">
+					<img src="images/Home/Cards/mecanico.webp" alt="">
+				</div>
+				<div class="card-text">
+					<h3 class="card-title">Manuntenção de Máquinas Florestais</h3>
+					<div class="card-description">
+						<p>Cursos desse Tópico:</p>
+						<ul class="card-list">
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita"> Harvester de Esteira</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita"> Harvester de Pneu</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Forwarder</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Retroescavadeira</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Picador de Madeira</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Sistema de supressão de incêndio</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Empilhadeira</li>
+						</ul>
+					</div>
+					<div class="btn-wrapper">
+						<input type="button" value="Clique aqui para mais detalhes" class="know-more-btn">
+					</div>
+				</div>
+			</div>
 
 			<!-- Solda -->
-			<div class="card"></div>
+			<div class="card">
+				<div class="img-wrapper">
+					<img src="images/Home/Cards/solda.webp" alt="">
+				</div>
+				<div class="card-text">
+					<h3 class="card-title">Solda</h3>
+					<div class="card-description">
+						<p>Conteúdo:</p>
+						<ul class="card-list">
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Eletrodos</li>
+							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">MIG/MAG</li>
+						</ul>
+					</div>
+					<div class="btn-wrapper">
+						<input type="button" value="Clique aqui para mais detalhes" class="know-more-btn">
+					</div>
+				</div>
+			</div>
 		</div>
 	</main>
 
