--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 					<div class="card-description">
 						<p>Cursos desse Tópico:</p>
 						<ul class="card-list">
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita"> Harvester de Esteira</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Forwarder</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Retroescavadeira</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Empilhadeira</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">NR11 Operação de Caminhão Grua</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon> Harvester de Esteira</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Forwarder</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Retroescavadeira</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Empilhadeira</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>NR11 Operação de Caminhão Grua</li>
 						</ul>
 					</div>
 					<div class="btn-wrapper">
@@ -87,13 +87,13 @@
 					<div class="card-description">
 						<p>Cursos desse Tópico:</p>
 						<ul class="card-list">
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita"> Harvester de Esteira</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita"> Harvester de Pneu</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Forwarder</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Retroescavadeira</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Picador de Madeira</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Sistema de supressão de incêndio</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Empilhadeira</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon> Harvester de Esteira</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon> Harvester de Pneu</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Forwarder</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Retroescavadeira</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Picador de Madeira</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Sistema de supressão de incêndio</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Empilhadeira</li>
 						</ul>
 					</div>
 					<div class="btn-wrapper">
@@ -112,8 +112,8 @@
 					<div class="card-description">
 						<p>Conteúdo:</p>
 						<ul class="card-list">
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">Eletrodos</li>
-							<li><img class="list-marker" src="images/Home/Cards/right-arrow.png" alt="Ícone de uma seta apontando para a direita">MIG/MAG</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Eletrodos</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>MIG/MAG</li>
 						</ul>
 					</div>
 					<div class="btn-wrapper">
@@ -122,15 +122,22 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="detailed-courses">
+			<div id="operacao-de-maquinas-florestais"></div>
+			
+			<div id="manuntencao-de-maquinas-florestais"></div>
+			
+			<div id="Solda"></div>
+		</div>
 	</main>
 
 	<footer class="footer">
 		<p class="footer__text">&copy; <a class="footer__link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
 	</footer>
 </body>
-<script src="scripts/showDivs.js"></script>
-<script src="scripts/createCards.js"></script>
 <script src="scripts/activate_toggle_button.js"></script>
+<script src="scripts/showDivs.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </html>
