Começando a estruturar os dados dos cursos mais detalhadamente

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>NR11 Operação de Caminhão Grua</li>
 						</ul>
 					</div>
-					<div class="btn-wrapper">
-						<input type="button" value="Clique aqui para mais detalhes" class="know-more-btn">
+					<div class="link-wrapper">
+						<a href="#operacao-de-maquinas-florestais">Clique aqui para mais detalhes</a>
 					</div>
 				</div>
 			</div>
@@ -83,7 +83,7 @@
 					<img src="images/Home/Cards/mecanico.webp" alt="">
 				</div>
 				<div class="card-text">
-					<h3 class="card-title">Manuntenção de Máquinas Florestais</h3>
+					<h3 class="card-title">Manutenção de Máquinas Florestais</h3>
 					<div class="card-description">
 						<p>Cursos desse Tópico:</p>
 						<ul class="card-list">
@@ -96,8 +96,8 @@
 							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Empilhadeira</li>
 						</ul>
 					</div>
-					<div class="btn-wrapper">
-						<input type="button" value="Clique aqui para mais detalhes" class="know-more-btn">
+					<div class="link-wrapper">
+						<a href="#manutencao-de-maquinas-florestais">Clique aqui para mais detalhes</a>
 					</div>
 				</div>
 			</div>
@@ -116,19 +116,42 @@
 							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>MIG/MAG</li>
 						</ul>
 					</div>
-					<div class="btn-wrapper">
-						<input type="button" value="Clique aqui para mais detalhes" class="know-more-btn">
+					<div class="link-wrapper">
+						<a href="#solda">Clique aqui para mais detalhes</a>
 					</div>
 				</div>
 			</div>
 		</div>
 
 		<div class="detailed-courses">
-			<div id="operacao-de-maquinas-florestais"></div>
+			<div id="operacao-de-maquinas-florestais">
+
+			</div>
 			
-			<div id="manuntencao-de-maquinas-florestais"></div>
+			<div id="manutencao-de-maquinas-florestais"></div>
 			
-			<div id="Solda"></div>
+			<div id="solda">
+				<div class="content">
+					<div class="title-content">
+						<h2>Solda</h2>
+					</div>
+					<div class="text">
+						<h3>Aspectos Gerais de Segurança na Soldagem</h3>
+						<p>As medidas gerais contra incêndio e/ou explosão são:</p>
+						<ol>
+							<li>Choque Életrico</li>
+							<li>Queimaduras</li>
+							<li>Radiações</li>
+							<li><abbr title="Equipamento de Proteção Individual">EPI</abbr></li>
+							<li>Máscara do Soldador</li>
+							<li>Tabela de filtros para soldagem pelo processo a arco elétrico MIG/MAG</li>
+							<li>Higiene e preservação das máscaras e óculos</li>
+							<li>Luvas Protetoras</li>
+							<li>Equipamento Individual de Respiração</li>
+						</ol>
+					</div>
+				</div>
+			</div>
 		</div>
 	</main>
 
