Card teste de Solda

--- a/index.html
+++ b/index.html
@@ -136,18 +136,34 @@
 						<h2>Solda</h2>
 					</div>
 					<div class="text">
-						<h3>Aspectos Gerais de Segurança na Soldagem</h3>
-						<p>As medidas gerais contra incêndio e/ou explosão são:</p>
 						<ol>
-							<li>Choque Életrico</li>
-							<li>Queimaduras</li>
-							<li>Radiações</li>
+							<li>Aspectos Gerais de Segurança</li>
+							<li>Informações Adicionais</li>
+							<li>Instruções de Segurança</li>
+							<li>Introdução</li>
+							<li>Noções de Eletricidade I</li> 
+							<li>Noções de Eletricidade II </li>
+							<li>Fonte Geradora</li>
+							<li>Circuito Fechado</li>
+							<li>Circuito Aberto</li>
+							<li>Corrente Contínua</li>
+							<li>Corrente Alternada</li>
+							<li>Eletrodo</li>
+							<li>Revestimentos</li>
+							<li>Classificação de Eletrodos Revestidos</li> 
+							<li>Soldagem ao Arco Elétrico com Eletrodo Consumível</li>
+							<li>Acessórios para Soldagem ao Arco Elétrico</li>
+							<li>Cuidados Especiais com Eletrodos Revestidos</li> 
+							<li>Equipamento para Armazenagem, Secagem e Manutenção de Secagem</li>
 							<li><abbr title="Equipamento de Proteção Individual">EPI</abbr></li>
-							<li>Máscara do Soldador</li>
-							<li>Tabela de filtros para soldagem pelo processo a arco elétrico MIG/MAG</li>
-							<li>Higiene e preservação das máscaras e óculos</li>
-							<li>Luvas Protetoras</li>
-							<li>Equipamento Individual de Respiração</li>
+							<li>Preparação do Equipamento de Soldagem</li>
+							<li>Acender e Manter o Arco Elétrico</li>
+							<li>Defeitos de Soldagem</li>
+							<li>Descontinuidades</li>
+							<li>Movimento do Eletrodo</li>
+							<li>MIG MAG</li>
+							<li>Oxicorte</li>
+							<li>Glossário</li>
 						</ol>
 					</div>
 				</div>
