--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
 					<div class="card-description">
 						<p>Conteúdo:</p>
 						<ul class="card-list">
-							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Eletrodos</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Segurança</li>
+							<li>Soldas do Tipo:</li>
 							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>MIG/MAG</li>
+							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Eletrodos</li>
+							</ul>
 						</ul>
 					</div>
 					<div class="link-wrapper">
