teste das especificações dos cursos

--- a/index.html
+++ b/index.html
@@ -128,7 +128,45 @@
 
 		<div class="detailed-courses">
 			<div id="operacao-de-maquinas-florestais">
+				<!-- Informações sobre o Curso de: Harvester de Esteira (Tipo uma section)-->
+				<div class="content" id="harvester-de-esteira">
+					<div class="title-content"><h2>Harvester de Esteira (80 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a pilotar uma Harvester de Esteira de forma fácil aqui</p>
+						<ul>
+							<li>Mecânica, Elétrica e Hidráulica Básica</li>
+							<li>Especialização em Mecanização Florestal</li>
+							<li>Máquina Base/Escavadeira PC200/ Cabeçote florestal 370E</li>
+							<li>Segurança na Operação</li>
+							<li>Procedimentos Administrativos</li>
+							<li>Procedimentos Operacionais</li>
+							<li>Tecnologias embarcadas</li>
+							<li>Sistema Hidráulica</li>
+							<li>Sistema Elétrico</li>
+							<li>Conhecimento Básico Cabeçote</li>
+						</ul>
+					</div>
+				</div>
 
+				<!-- Informações sobre o Curso de: Forwarder (Tipo uma section)-->
+				<div class="content" id="forwarder">
+					<div class="title-content"><h2>Harvester de Esteira (80 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a pilotar uma Harvester de Esteira de forma fácil aqui</p>
+						<ul>
+							<li>Mecânica, Elétrica e Hidráulica Básica</li>
+							<li>Especialização em Mecanização Florestal</li>
+							<li>Máquina Base/Escavadeira PC200/ Cabeçote florestal 370E</li>
+							<li>Segurança na Operação</li>
+							<li>Procedimentos Administrativos</li>
+							<li>Procedimentos Operacionais</li>
+							<li>Tecnologias embarcadas</li>
+							<li>Sistema Hidráulica</li>
+							<li>Sistema Elétrico</li>
+							<li>Conhecimento Básico Cabeçote</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 			
 			<div id="manutencao-de-maquinas-florestais"></div>
