--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 
 				<!-- Informações sobre o Curso de: Forwarder (Tipo uma section)-->
 				<div class="content" id="forwarder">
-					<div class="title-content"><h2>Harvester de Esteira (80 Horas)</h2></div>
+					<div class="title-content"><h2>Forwarder (80 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a pilotar uma Harvester de Esteira de forma fácil aqui</p>
+						<p>Aprenda a pilotar uma Forwarder de forma fácil aqui</p>
 						<ul>
 							<li>Mecânica, Elétrica e Hidráulica Básica</li>
 							<li>Especialização em Mecanização Florestal</li>
@@ -167,6 +167,67 @@
 						</ul>
 					</div>
 				</div>
+			
+				<!-- Informações sobre o Curso de: Retroescavadeira (Tipo uma section)-->
+				<div class="content" id="retroescavadeira">
+					<div class="title-content"><h2>Retroescavadeira (24 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a pilotar uma Retroescavadeira de forma fácil aqui</p>
+						<ul>
+							<li>Segurança</li>
+							<li>Termos técnicos</li>
+							<li>Adesivos</li>
+							<li>Instalação/Montagem</li>
+							<li>Instrulções de Operação</li>
+							<li>Aplicações especiais</li>
+							<li>Transporte e Armazenagem</li>
+							<li>Hidráulica Básica</li>
+						</ul>
+					</div>
+				</div>
+		
+				<!-- Informações sobre o Curso de: Empilhadeira (Tipo uma section)-->
+				<div class="content" id="empilhadeira">
+					<div class="title-content"><h2>Empilhadeira (24 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a pilotar uma Empilhadeira de forma fácil aqui</p>
+						<ul>
+							<li>Regulamentos de Operação</li>
+							<li>Requisitos Básicos</li>
+							<li>Segurança</li>
+							<li>Funcionamento</li>
+							<li>Operações</li>
+							<li>Sistema Hidráulico</li>
+							<li>Especificações</li>
+							<li>Acessórios</li>
+							<li>Cuidados</li>
+							<li>Regras</li>
+							<li>Prática de Campo</li>
+						</ul>
+					</div>
+				</div>
+
+				<!-- Informações sobre o Curso de: NR11 Caminhão Grua (Tipo uma section)-->
+				<div class="content" id="caminhao-grua">
+					<div class="title-content"><h2>NR11 Caminhão Grua (24 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a pilotar um Caminhão Grua de forma fácil aqui</p>
+						<ul>
+							<li>Regulamentos de Operação</li>
+							<li>Requisitos Básicos</li>
+							<li>Segurança</li>
+							<li>Funcionamento</li>
+							<li>Operações</li>
+							<li>Sistema Hidráulico</li>
+							<li>Especificações</li>
+							<li>Acessórios</li>
+							<li>Cuidados</li>
+							<li>Regras</li>
+							<li>Prática de Campo</li>
+						</ul>
+					</div>
+				</div>
+				
 			</div>
 			
 			<div id="manutencao-de-maquinas-florestais"></div>
