--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 		<div class="detailed-courses">
 			<div id="operacao-de-maquinas-florestais">
 				<!-- Informações sobre o Curso de: Harvester de Esteira (Tipo uma section)-->
-				<div class="content" id="harvester-de-esteira">
+				<div class="content" id="harvester-de-esteira-op">
 					<div class="title-content"><h2>Harvester de Esteira (80 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a pilotar uma Harvester de Esteira de forma fácil aqui</p>
+						<p>Aprenda a operar uma Harvester de Esteira de forma fácil aqui</p>
 						<ul>
 							<li>Mecânica, Elétrica e Hidráulica Básica</li>
 							<li>Especialização em Mecanização Florestal</li>
@@ -149,10 +149,135 @@
 				</div>
 
 				<!-- Informações sobre o Curso de: Forwarder (Tipo uma section)-->
-				<div class="content" id="forwarder">
+				<div class="content" id="forwarder-op">
 					<div class="title-content"><h2>Forwarder (80 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a pilotar uma Forwarder de forma fácil aqui</p>
+						<p>Aprenda a operar uma Forwarder de forma fácil aqui</p>
+						<ul>
+							<li>Mecânica, Elétrica e Hidráulica Básica</li>
+							<li>Especialização em Mecanização Florestal</li>
+							<li>Máquina Base/Escavadeira PC200/ Cabeçote florestal 370E</li>
+							<li>Segurança na Operação</li>
+							<li>Procedimentos Administrativos</li>
+							<li>Procedimentos Operacionais</li>
+							<li>Tecnologias embarcadas</li>
+							<li>Sistema Hidráulica</li>
+							<li>Sistema Elétrico</li>
+							<li>Conhecimento Básico Cabeçote</li>
+						</ul>
+					</div>
+				</div>
+			
+				<!-- Informações sobre o Curso de: Retroescavadeira (Tipo uma section)-->
+				<div class="content" id="retroescavadeira-op">
+					<div class="title-content"><h2>Retroescavadeira (24 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a operar uma Retroescavadeira de forma fácil aqui</p>
+						<ul>
+							<li>Segurança</li>
+							<li>Termos técnicos</li>
+							<li>Adesivos</li>
+							<li>Instalação/Montagem</li>
+							<li>Instruções de Operação</li>
+							<li>Aplicações especiais</li>
+							<li>Transporte e Armazenagem</li>
+							<li>Hidráulica Básica</li>
+						</ul>
+					</div>
+				</div>
+		
+				<!-- Informações sobre o Curso de: Empilhadeira (Tipo uma section)-->
+				<div class="content" id="empilhadeira-op">
+					<div class="title-content"><h2>Empilhadeira (24 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a operar uma Empilhadeira de forma fácil aqui</p>
+						<ul>
+							<li>Regulamentos de Operação</li>
+							<li>Requisitos Básicos</li>
+							<li>Segurança</li>
+							<li>Funcionamento</li>
+							<li>Operações</li>
+							<li>Sistema Hidráulico</li>
+							<li>Especificações</li>
+							<li>Acessórios</li>
+							<li>Cuidados</li>
+							<li>Regras</li>
+							<li>Prática de Campo</li>
+						</ul>
+					</div>
+				</div>
+
+				<!-- Informações sobre o Curso de: NR11 Caminhão Grua (Tipo uma section)-->
+				<div class="content" id="caminhao-grua-op">
+					<div class="title-content"><h2>NR11 Caminhão Grua (24 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a operar um Caminhão Grua de forma fácil aqui</p>
+						<ul>
+							<li>Regulamentos de Operação</li>
+							<li>Requisitos Básicos</li>
+							<li>Segurança</li>
+							<li>Funcionamento</li>
+							<li>Operações</li>
+							<li>Sistema Hidráulico</li>
+							<li>Especificações</li>
+							<li>Acessórios</li>
+							<li>Cuidados</li>
+							<li>Regras</li>
+							<li>Prática de Campo</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			
+			<div id="manutencao-de-maquinas-florestais">
+				<!-- Informações sobre o Curso de: Harvester de Esteira (Tipo uma section)-->
+				<div class="content" id="harvester-de-esteira-mt">
+					<div class="title-content"><h2>Harvester de Esteira (80 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a operar uma Harvester de Esteira de forma fácil aqui</p>
+
+						<ul>
+							<li>A. Máquina Base</li>
+							<ul>
+								<li>Apresentação dos Componentes</li>
+								<li>Sistema Rodante</li>
+								<li>Sistema Elétrico</li>
+								<li>Sistema Hidráulico</li>
+								<li>Ajustes da Grua</li>
+								<li>Sistema de Controle</li>
+								<li>Sistema de Supresssão de Incêndio</li>
+								<li>Diagnóstico de Falhas</li>
+							</ul>
+							<li>B. Cabeça Processadora</li>
+							<ul>
+								<li>Sistema de Alimentação</li>
+								<li>Sistema de Desgalhamento</li>
+								<li>Sistema Hidráulico</li>
+								<li>Sistema Elétrico</li>
+								<li>Sistema de Corte</li>
+								<li>Sistema de Lubrificação</li>
+								<li>Sistema de Medição</li>
+								<li>Sistema Estrutural</li>
+								<li>Sistema de Controle</li>
+								<li>Diagnóstico de Falhas</li>
+							</ul>
+							<li>Motor Diesel</li>
+							<ul>
+								<li>Sistema Mecânico</li>
+								<li>Sistema Elétrico</li>
+								<li>Sistema de Lubrificação</li>
+								<li>Sistema de Arrefecimento</li>
+								<li>Sistema de Alimentação</li>
+							</ul>
+						</ul>
+					</div>
+				</div>
+
+				<!-- Informações sobre o Curso de: Forwarder (Tipo uma section)-->
+				<div class="content" id="forwarder-mt">
+					<div class="title-content"><h2>Forwarder (80 Horas)</h2></div>
+					<div class="text">
+						<p>Aprenda a operar uma Forwarder de forma fácil aqui</p>
 						<ul>
 							<li>Mecânica, Elétrica e Hidráulica Básica</li>
 							<li>Especialização em Mecanização Florestal</li>
@@ -172,13 +297,13 @@
 				<div class="content" id="retroescavadeira">
 					<div class="title-content"><h2>Retroescavadeira (24 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a pilotar uma Retroescavadeira de forma fácil aqui</p>
+						<p>Aprenda a operar uma Retroescavadeira de forma fácil aqui</p>
 						<ul>
 							<li>Segurança</li>
 							<li>Termos técnicos</li>
 							<li>Adesivos</li>
 							<li>Instalação/Montagem</li>
-							<li>Instrulções de Operação</li>
+							<li>Instruções de Operação</li>
 							<li>Aplicações especiais</li>
 							<li>Transporte e Armazenagem</li>
 							<li>Hidráulica Básica</li>
@@ -190,7 +315,7 @@
 				<div class="content" id="empilhadeira">
 					<div class="title-content"><h2>Empilhadeira (24 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a pilotar uma Empilhadeira de forma fácil aqui</p>
+						<p>Aprenda a operar uma Empilhadeira de forma fácil aqui</p>
 						<ul>
 							<li>Regulamentos de Operação</li>
 							<li>Requisitos Básicos</li>
@@ -211,7 +336,7 @@
 				<div class="content" id="caminhao-grua">
 					<div class="title-content"><h2>NR11 Caminhão Grua (24 Horas)</h2></div>
 					<div class="text">
-						<p>Aprenda a pilotar um Caminhão Grua de forma fácil aqui</p>
+						<p>Aprenda a operar um Caminhão Grua de forma fácil aqui</p>
 						<ul>
 							<li>Regulamentos de Operação</li>
 							<li>Requisitos Básicos</li>
@@ -227,10 +352,7 @@
 						</ul>
 					</div>
 				</div>
-				
 			</div>
-			
-			<div id="manutencao-de-maquinas-florestais"></div>
 			
 			<div id="solda">
 				<div class="content">
@@ -238,7 +360,7 @@
 						<h2>Solda</h2>
 					</div>
 					<div class="text">
-						<ol>
+						<ul>
 							<li>Aspectos Gerais de Segurança</li>
 							<li>Informações Adicionais</li>
 							<li>Instruções de Segurança</li>
@@ -266,7 +388,7 @@
 							<li>MIG MAG</li>
 							<li>Oxicorte</li>
 							<li>Glossário</li>
-						</ol>
+						</ul>
 					</div>
 				</div>
 			</div>
